Prevent collapsing margins between cards

--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,9 @@ body{
   margin: 10px 0px;
   border-radius: 10px;
   text-align: center;
+  /* prevent collapsing margins */
+  display: flex;
+  flex-direction: column;
 }
 
 .card h3{
@@ -44,9 +47,11 @@ img{
 }
 
 .color{
-  height: 1rem;
-  width: 1rem;
+  height: 15px;
+  width: 15px;
   border-radius: 50%;
+  margin: 0 2px;
+  padding: 0px;
 }
 
 .page-title{
@@ -57,4 +62,10 @@ img{
 
 .linked-card{
   display: block;
+}
+
+.page-content{
+  /* prevent collapsing margins */
+  display:flex;
+  flex-direction: column;
 }
